--- a/style.css
+++ b/style.css
@@ -21,12 +21,14 @@ a, .secondary-text {
 
 button {
     background: #3882F6;
+    font-size: 18px;
     color: white;
     padding: 10px 30px;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
 }
 
 img {
@@ -45,7 +47,7 @@ img {
 
 .hero {
     padding: 100px 100px;
-    gap: 30px;
+    gap: 80px;
 }
 
 .header {
